Bit more customization

--- a/index.html
+++ b/index.html
@@ -58,19 +58,9 @@
 
                     <div id="mobile-menu-icon" class="btn btn-outline-inverse visible-xs"><span class="glyphicon glyphicon-th"></span></div>
 
-                    <!-- <div id="search&#45;container"> -->
-                    <!--     <div id="search&#45;icon"><i class="fa fa&#45;search"></i></div> -->
-                    <!--     <div id="search&#45;input"> -->
-                    <!--         <form class="clearfix"> -->
-                    <!--             <input type="text" class="form&#45;control" id="website&#45;search" name="search" placeholder="Search"> -->
-                    <!--             <div id="search&#45;close"><i class="fa fa&#45;times"></i></div> -->
-                    <!--         </form> -->
-                    <!--     </div> -->
-                    <!-- </div><!&#45;&#45; #search&#45;container &#45;&#45;> -->
-
                     <ul id="main-menu">
                         <li class="menu-item current-menu-ancestor"><a href="index.html">Home</a></li>
-                        <li class="menu-item"><a href="about.html">What we believe</a></li>
+                        <li class="menu-item"><a href="what-we-believe.html">What we believe</a></li>
                         <li class="menu-item"><a href="activities.html">Resources</a></li>
                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                     </ul><!-- #main-menu -->
@@ -213,92 +203,6 @@
                 </div><!-- .container-fluid -->
                 <!-- End: Section 2 -->
 
-                <!--&lt;!&ndash; =========== Section 3 =========== &ndash;&gt;-->
-                <!--<div class="container-fluid horizontal-section-container clearfix">-->
-                    <!--<div class="row">-->
-
-                        <!--<div class="col-xs-12">-->
-                            <!--&lt;!&ndash; Latest News &ndash;&gt;-->
-                            <!--<div id="home-latest-news" class="section-container clearfix">-->
-
-                                <!--<a href="news.html" class="section-header with-icon">-->
-                                    <!--<div class="icon"><span class="glyphicon glyphicon-bullhorn"></span></div>-->
-                                    <!--<h5 class="text">Latest News</h5>-->
-                                <!--</a>&lt;!&ndash; .section-header &ndash;&gt;-->
-
-                                <!--<div class="section-content">-->
-
-                                    <!--&lt;!&ndash; News Items &ndash;&gt;-->
-                                    <!--<div class="thumbnail-list row equal-height clearfix">-->
-
-                                        <!--&lt;!&ndash; news item &ndash;&gt;-->
-                                        <!--<div class="item col-sm-3">-->
-                                            <!--<div class="thumbnail item-content">-->
-                                                <!--<a href="generic-page-w-submenu.html" class="img-mask-effect fade scaleimage">-->
-                                                    <!--<img src="images/temp/thumb-g-1.jpg" alt="Sunset scenery">-->
-                                                    <!--<i class="mask"><span class="glyphicon glyphicon-search"></span></i>-->
-                                                <!--</a>-->
-                                                <!--<div class="caption">-->
-                                                    <!--<span class="date">Apr 15</span>-->
-                                                    <!--<h6 class="title"><a href="generic-page-w-submenu.html">Proin gravida nibh vel velit auctor aliquets ollic</a></h6>-->
-                                                <!--</div>-->
-                                            <!--</div>&lt;!&ndash; .thumbnail &ndash;&gt;-->
-                                        <!--</div>&lt;!&ndash; .item &ndash;&gt;-->
-
-                                        <!--&lt;!&ndash; news item &ndash;&gt;-->
-                                        <!--<div class="item col-sm-3">-->
-                                            <!--<div class="thumbnail item-content">-->
-                                                <!--<a href="generic-page-w-submenu.html" class="img-mask-effect fade scaleimage">-->
-                                                    <!--<img src="images/temp/thumb-g-2.jpg" alt="Clothing line pegs">-->
-                                                    <!--<i class="mask"><span class="glyphicon glyphicon-search"></span></i>-->
-                                                <!--</a>-->
-                                                <!--<div class="caption">-->
-                                                    <!--<span class="date">Apr 10</span>-->
-                                                    <!--<h6 class="title"><a href="generic-page-w-submenu.html">Nisi elit consequat ipsum</a></h6>-->
-                                                <!--</div>-->
-                                            <!--</div>&lt;!&ndash; .thumbnail &ndash;&gt;-->
-                                        <!--</div>&lt;!&ndash; .item &ndash;&gt;-->
-
-                                        <!--&lt;!&ndash; news item &ndash;&gt;-->
-                                        <!--<div class="item col-sm-3">-->
-                                            <!--<div class="thumbnail item-content">-->
-                                                <!--<a href="generic-page-w-submenu.html" class="img-mask-effect fade scaleimage">-->
-                                                    <!--<img src="images/temp/thumb-g-3.jpg" alt="Butterfly">-->
-                                                    <!--<i class="mask"><span class="glyphicon glyphicon-search"></span></i>-->
-                                                <!--</a>-->
-                                                <!--<div class="caption">-->
-                                                    <!--<span class="date">Apr 5</span>-->
-                                                    <!--<h6 class="title"><a href="generic-page-w-submenu.html">Proin gravida nibh vel velit auctor aliquets ollic si elit consequat ipsum lorem ipsum</a></h6>-->
-                                                <!--</div>-->
-                                            <!--</div>&lt;!&ndash; .thumbnail &ndash;&gt;-->
-                                        <!--</div>&lt;!&ndash; .item &ndash;&gt;-->
-
-                                        <!--&lt;!&ndash; news item &ndash;&gt;-->
-                                        <!--<div class="item col-sm-3">-->
-                                            <!--<div class="thumbnail item-content">-->
-                                                <!--<a href="generic-page-w-submenu.html" class="img-mask-effect fade scaleimage">-->
-                                                    <!--<img src="images/temp/thumb-g-4.jpg" alt="Lake">-->
-                                                    <!--<i class="mask"><span class="glyphicon glyphicon-search"></span></i>-->
-                                                <!--</a>-->
-                                                <!--<div class="caption">-->
-                                                    <!--<span class="date">Mar 27</span>-->
-                                                    <!--<h6 class="title"><a href="generic-page-w-submenu.html">Proin gravida nibh vel velit auctor aliquets ollic</a></h6>-->
-                                                <!--</div>-->
-                                            <!--</div>&lt;!&ndash; .thumbnail &ndash;&gt;-->
-                                        <!--</div>&lt;!&ndash; .item &ndash;&gt;-->
-
-                                    <!--</div>&lt;!&ndash; .thumbnail-list &ndash;&gt;-->
-
-                                <!--</div>&lt;!&ndash; .section-content &ndash;&gt;-->
-
-                            <!--</div>&lt;!&ndash; .section-container &ndash;&gt;-->
-                            <!--&lt;!&ndash; Latest News &ndash;&gt;-->
-                        <!--</div>&lt;!&ndash; .col-xs-12 &ndash;&gt;-->
-
-                    <!--</div>&lt;!&ndash; .row &ndash;&gt;-->
-                <!--</div>&lt;!&ndash; .container-fluid &ndash;&gt;-->
-                <!--&lt;!&ndash; End: Section 3 &ndash;&gt; -->
-
                 <!-- =========== Section 4 =========== -->
                 <div class="container-fluid horizontal-section-container clearfix">
                     <div class="row">                      
@@ -402,46 +306,6 @@
 
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" width="400" height="300" frameborder="0" style="border:0"></iframe>
 
-                                <!--<a href="#" class="section-header footer-header">-->
-                                    <!--<h5 class="text">Affiliates</h5>-->
-                                <!--</a>&lt;!&ndash; .section-header &ndash;&gt;-->
-
-                                <!--<div class="section-content clearfix">-->
-                                    <!--&lt;!&ndash; initialised in /js/initialise-functions.js &ndash;&gt;-->
-                                    <!--<ul id="affiliates-slider-4cols" class="icons-grid-list-4cols owl-carousel owl-theme">-->
-
-                                        <!--&lt;!&ndash; icon &ndash;&gt;-->
-                                        <!--<li class="icon clearfix">-->
-                                            <!--<a href="#"><img src="images/temp/icon-company1.png" alt="Company Logo"></a>-->
-                                        <!--</li>-->
-
-                                        <!--&lt;!&ndash; icon &ndash;&gt;-->
-                                        <!--<li class="icon clearfix">-->
-                                            <!--<a href="#"><img src="images/temp/icon-company2.png" alt="Company Logo"></a>-->
-                                        <!--</li>-->
-
-                                        <!--&lt;!&ndash; icon &ndash;&gt;-->
-                                        <!--<li class="icon clearfix">-->
-                                            <!--<a href="#"><img src="images/temp/icon-company3.png" alt="Company Logo"></a>-->
-                                        <!--</li>-->
-
-                                        <!--&lt;!&ndash; icon &ndash;&gt;-->
-                                        <!--<li class="icon clearfix">-->
-                                            <!--<a href="#"><img src="images/temp/icon-company4.png" alt="Company Logo"></a>-->
-                                        <!--</li>-->
-
-                                        <!--&lt;!&ndash; icon &ndash;&gt;-->
-                                        <!--<li class="icon clearfix">-->
-                                            <!--<a href="#"><img src="images/temp/icon-company5.png" alt="Company Logo"></a>-->
-                                        <!--</li>-->
-
-                                        <!--&lt;!&ndash; icon &ndash;&gt;-->
-                                        <!--<li class="icon clearfix">-->
-                                            <!--<a href="#"><img src="images/temp/icon-company1.png" alt="Company Logo"></a>-->
-                                        <!--</li>-->
-
-                                    <!--</ul>&lt;!&ndash; .icons-grid-list &ndash;&gt;-->
-                                <!--</div>&lt;!&ndash; .section-content &ndash;&gt;-->
 
                             </div><!-- .section-container -->
                             <!-- End: Affiliates Carousel -->
