--- a/what-we-believe.html
+++ b/what-we-believe.html
@@ -70,9 +70,9 @@
 
                     <ul id="main-menu">
                         <li class="menu-item"><a href="index.html">Home</a></li>
-                        <li class="menu-item"><a href="what-we-believe.html">What we believe</a></li>
+                        <li class="menu-item current-menu-ancestor"><a href="what-we-believe.html">What we believe</a></li>
                         <li class="menu-item"><a href="activities.html">Resources</a></li>
-                        <li class="menu-item current-menu-ancestor"><a href="contact.html">Contact</a></li>
+                        <li class="menu-item"><a href="contact.html">Contact</a></li>
                     </ul><!-- #main-menu -->
 
                 </div><!-- #menu-container -->
@@ -87,7 +87,7 @@
                 <div id="top-banner" class="container-fluid horizontal-section-container clearfix">
                     <div class="row">
                         <div class="col-xs-12">
-                            <img src="images/temp/banner-7.jpg" alt="Sunset" class="full-width-image">
+                            <img src="images/temp/banner-1.jpg" alt="Landscape, wind turbines" class="full-width-image">
                         </div><!-- .col-xs-12 -->
                     </div><!-- .row -->
                 </div>
@@ -103,67 +103,21 @@
 
                                 <div class="section-content clearfix">
 
-                                    <h1 class="page_title">Contact</h1>
+                                    <h1 class="page_title">About Us</h1>
 
-                                    <!-- contact content -->
-                                    <div class="row clearfix">
+                                    <h4>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elituis sequis bibendum auct erd.</h4>
 
-                                        <!-- contact details -->
-                                        <div class="col-sm-6">
-                                            
-                                            <!-- Contact Details -->
-                                            <h6>Absolutely everyone is welcome! Stop in sometime :)</h6>
+                                    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra.</p>
 
-                                            <ul class="vertical-simple-list contact-list">
-                                                
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="glyphicon glyphicon-map-marker"></span></div>
-                                                    <h6 class="title">Metro church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
-                                                </div></li>
+                                    <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p> 
 
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
-                                                    <h6 class="title">414-393-8777</h6>
-                                                </div></li>
+                                    <img src="images/temp/about_img.jpg" alt="Sky" class="content-image pull-left"> 
 
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
-                                                    <h6 class="title"><a href="#">masemvenuso@gmail.com</a></h6>
-                                                </div></li>
+                                    <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
 
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="fa fa-clock-o"></span></div>
-                                                    <h6 class="title">
-                                                        <strong>Meeting Times</strong><br/>
-                                                        Sunday 9:30am - Bible Study<br />
-                                                        Sunday 10:30am - Worship<br />
-                                                        Wednesday 7:00pm - Bible Study
-                                                    </h6>
-                                                </div></li>
+                                    <p>Fusce imperdiet ornare risus, sit amet luctus augue sodales ac. Morbi nunc justo, fringilla in tempor at, fermentum a felis. Morbi non mollis libero, lobortis luctus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer a dapibus nulla, ac condimentum ipsum. Nullam purus erat, interdum consectetur commodo eu, ullamcorper vitae ante. Duis ligula nulla, dignissim sed venenatis sit amet, vestibulum a erat. Nam ultricies leo vitae urna ullamcorper vestibulum.</p>
 
-                                            </ul><!-- .vertical-simple-list --> 
-
-                                            <hr/>        
-
-                                            <ul class="social-media-icons clearfix">
-                                                <li><a href="#" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#" target="_blank" title="Google+"><i class="fa fa-google-plus"></i></a></li>
-                                            </ul>
-
-                                        </div><!-- .col-sm-6 -->
-
-                                        <div class="col-sm-6">
-                                            <strong>Location</strong><br/>
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" width="400" height="300" frameborder="0" style="border:0"></iframe>
-                                        </div>
-
-                                    </div>
-                                    <!-- end: contact content -->
+                                    <p>Morbi gravida metus sit amet mi interdum sodales. Phasellus mattis risus neque, id interdum odio consequat quis. Curabitur aliquet libero sed auctor rhoncus. Phasellus pulvinar venenatis sodales. Proin tincidunt suscipit erat, nec viverra magna volutpat sed.</p>
 
                                 </div><!-- .section-content -->
 
@@ -171,9 +125,73 @@
                             <!-- End: Main Page Content -->
                         </div><!-- .col-sm-12 -->
 
+
+
                     </div><!-- .row -->
                 </div><!-- .container-fluid -->
                 <!-- End: Section 2 -->
+
+
+                <!-- =========== Footer Alt =========== -->
+                <footer class="container-fluid horizontal-section-container clearfix">
+                    <div class="row">
+
+                        <!-- footer hor divider -->
+                        <div class="col-xs-12"><hr class="hor-divider" /></div>
+
+                        <div class="col-sm-6">
+                            <!-- Affiliates Carousel -->
+                            <div id="footer-affiliates" class="section-container clearfix">
+
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" width="400" height="300" frameborder="0" style="border:0"></iframe>
+
+                            </div><!-- .section-container -->
+                            <!-- End: Affiliates Carousel -->                            
+                        </div><!-- .col-sm-6 -->
+
+                        <div class="col-sm-6">
+                            <!-- Contact Us -->
+                            <div id="footer-contact-us" class="section-container clearfix">
+
+                                <a href="contact.html" class="section-header footer-header">
+                                    <h5 class="text">Contact Us</h5>
+                                </a><!-- .section-header -->
+
+                                <div class="section-content clearfix">
+                                    <div class="vertical-simple-list contact-list">
+                                        <br />
+                                        <div class="col-xs-6">
+                                            <!-- list item -->
+                                            <div class="item clearfix"><div class="item-content">
+                                                <div class="icon"><span class="glyphicon glyphicon-map-marker"></span></div>
+                                                <h6 class="title">Metro church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
+                                            </div></div>
+                                        </div><!-- .col-xs-6 -->
+
+                                        <div class="col-xs-6">
+                                            <!-- list item -->
+                                            <div class="item clearfix"><div class="item-content">
+                                                <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
+                                                <h6 class="title">414-393-8777</h6>
+                                            </div></div>
+
+                                            <!-- list item -->
+                                            <div class="item clearfix"><div class="item-content">
+                                                <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
+                                                <h6 class="title">masemvenuso@gmail.com</h6>
+                                            </div></div>
+                                        </div><!-- .col-xs-6 -->
+
+                                    </div><!-- .vertical-simple-list -->
+                                </div><!-- .section-content -->
+
+                            </div><!-- .section-container -->
+                            <!-- End: Contact Us -->                            
+                        </div><!-- .col-sm-6 -->
+
+                    </div><!-- .row -->
+                </footer><!-- .container-fluid -->
+                <!-- End: Footer Alt -->           
 
             </div><!-- .inside-body-content-container -->
             <!-- End: Page Body Inside Content -->
