--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <ul id="main-menu">
                         <li class="menu-item current-menu-ancestor"><a href="index.html">Home</a></li>
                         <li class="menu-item"><a href="what-we-believe.html">What we believe</a></li>
-                        <li class="menu-item"><a href="activities.html">Resources</a></li>
+                        <li class="menu-item"><a href="resources.html">Resources</a></li>
                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                     </ul><!-- #main-menu -->
 
@@ -374,9 +374,7 @@
             <!-- right -->
             <div class="col-sm-6 beneath-footer-right">
                 <ul class="social-media-icons clearfix">
-                    <li><a href="#" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" title="Google+"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="http://localhost:8000/contact.html" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
                 </ul>
             </div>
 
