--- a/resources.html
+++ b/resources.html
@@ -61,8 +61,8 @@
                     <ul id="main-menu">
                         <li class="menu-item"><a href="index.html">Home</a></li>
                         <li class="menu-item"><a href="what-we-believe.html">What we believe</a></li>
-                        <li class="menu-item"><a href="resources.html">Resources</a></li>
-                        <li class="menu-item current-menu-ancestor"><a href="contact.html">Contact</a></li>
+                        <li class="menu-item current-menu-ancestor"><a href="resources.html">Resources</a></li>
+                        <li class="menu-item"><a href="contact.html">Contact</a></li>
                     </ul><!-- #main-menu -->
 
                 </div><!-- #menu-container -->
@@ -77,7 +77,7 @@
                 <div id="top-banner" class="container-fluid horizontal-section-container clearfix">
                     <div class="row">
                         <div class="col-xs-12">
-                            <img src="images/temp/banner-7.jpg" alt="Sunset" class="full-width-image">
+                            <img src="images/temp/banner-1.jpg" alt="Landscape, wind turbines" class="full-width-image">
                         </div><!-- .col-xs-12 -->
                     </div><!-- .row -->
                 </div>
@@ -93,65 +93,25 @@
 
                                 <div class="section-content clearfix">
 
-                                    <h1 class="page_title">Contact</h1>
+                                    <h1 class="page_title">Resources</h1>
 
-                                    <!-- contact content -->
-                                    <div class="row clearfix">
+                                    <div class="thumbnail-list row clearfix">
 
-                                        <!-- contact details -->
-                                        <div class="col-sm-6">
-                                            
-                                            <!-- Contact Details -->
-                                            <h6>Absolutely everyone is welcome! Stop in sometime :)</h6>
-
-                                            <ul class="vertical-simple-list contact-list">
-                                                
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="glyphicon glyphicon-map-marker"></span></div>
-                                                    <h6 class="title">Metro church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
-                                                </div></li>
-
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
-                                                    <h6 class="title">414-393-8777</h6>
-                                                </div></li>
-
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
-                                                    <h6 class="title"><a href="#">masemvenuso@gmail.com</a></h6>
-                                                </div></li>
-
-                                                <!-- list item -->
-                                                <li class="item clearfix"><div class="item-content">
-                                                    <div class="icon"><span class="fa fa-clock-o"></span></div>
-                                                    <h6 class="title">
-                                                        <strong>Meeting Times</strong><br/>
-                                                        Sunday 9:30am - Bible Study<br />
-                                                        Sunday 10:30am - Worship<br />
-                                                        Wednesday 7:00pm - Bible Study
-                                                    </h6>
-                                                </div></li>
-
-                                            </ul><!-- .vertical-simple-list --> 
-
-                                            <hr/>        
-
-                                            <ul class="social-media-icons clearfix">
-                                                <li><a href="http://localhost:8000/contact.html" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
-                                            </ul>
-
-                                        </div><!-- .col-sm-6 -->
-
-                                        <div class="col-sm-6">
-                                            <strong>Location</strong><br/>
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" width="400" height="300" frameborder="0" style="border:0"></iframe>
-                                        </div>
+                                        <!-- item -->
+                                        <div class="item col-sm-6">
+                                            <div class="thumbnail item-content">
+                                                <a href="https://soundcloud.com/metrococ" class="img-mask-effect fade scaleimage">
+                                                    <img src="images/soundcloud-icon.png" alt="Soundcloud">
+                                                    <i class="mask"><span class="glyphicon glyphicon-search"></span></i>
+                                                </a>
+                                                <div class="caption">
+                                                    <h5 class="title bold"><a href="https://soundcloud.com/metrococ">Sermon Recordings</a></h5>
+                                                    <p>Available on soundcloud.</p>
+                                                </div>
+                                            </div><!-- .thumbnail -->
+                                        </div><!-- .item -->
 
                                     </div>
-                                    <!-- end: contact content -->
 
                                 </div><!-- .section-content -->
 
@@ -159,9 +119,73 @@
                             <!-- End: Main Page Content -->
                         </div><!-- .col-sm-12 -->
 
+
+
                     </div><!-- .row -->
                 </div><!-- .container-fluid -->
                 <!-- End: Section 2 -->
+
+
+                <!-- =========== Footer Alt =========== -->
+                <footer class="container-fluid horizontal-section-container clearfix">
+                    <div class="row">
+
+                        <!-- footer hor divider -->
+                        <div class="col-xs-12"><hr class="hor-divider" /></div>
+
+                        <div class="col-sm-6">
+                            <!-- Affiliates Carousel -->
+                            <div id="footer-affiliates" class="section-container clearfix">
+
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" width="400" height="300" frameborder="0" style="border:0"></iframe>
+
+                            </div><!-- .section-container -->
+                            <!-- End: Affiliates Carousel -->                            
+                        </div><!-- .col-sm-6 -->
+
+                        <div class="col-sm-6">
+                            <!-- Contact Us -->
+                            <div id="footer-contact-us" class="section-container clearfix">
+
+                                <a href="contact.html" class="section-header footer-header">
+                                    <h5 class="text">Contact Us</h5>
+                                </a><!-- .section-header -->
+
+                                <div class="section-content clearfix">
+                                    <div class="vertical-simple-list contact-list">
+                                        <br />
+                                        <div class="col-xs-6">
+                                            <!-- list item -->
+                                            <div class="item clearfix"><div class="item-content">
+                                                <div class="icon"><span class="glyphicon glyphicon-map-marker"></span></div>
+                                                <h6 class="title">Metro church of Christ<br />9413 W Greenfield Ave<br/>West Allis, WI</h6>
+                                            </div></div>
+                                        </div><!-- .col-xs-6 -->
+
+                                        <div class="col-xs-6">
+                                            <!-- list item -->
+                                            <div class="item clearfix"><div class="item-content">
+                                                <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
+                                                <h6 class="title">414-393-8777</h6>
+                                            </div></div>
+
+                                            <!-- list item -->
+                                            <div class="item clearfix"><div class="item-content">
+                                                <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
+                                                <h6 class="title">masemvenuso@gmail.com</h6>
+                                            </div></div>
+                                        </div><!-- .col-xs-6 -->
+
+                                    </div><!-- .vertical-simple-list -->
+                                </div><!-- .section-content -->
+
+                            </div><!-- .section-container -->
+                            <!-- End: Contact Us -->                            
+                        </div><!-- .col-sm-6 -->
+
+                    </div><!-- .row -->
+                </footer><!-- .container-fluid -->
+                <!-- End: Footer Alt -->           
 
             </div><!-- .inside-body-content-container -->
             <!-- End: Page Body Inside Content -->
@@ -182,7 +206,7 @@
             <!-- right -->
             <div class="col-sm-6 beneath-footer-right">
                 <ul class="social-media-icons clearfix">
-                    <li><a href="https://www.facebook.com/groups/metrochurchofchrist/" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="http://localhost:8000/contact.html" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
                 </ul>
             </div>
 
