--- a/what-we-believe.html
+++ b/what-we-believe.html
@@ -58,20 +58,10 @@
 
                     <div id="mobile-menu-icon" class="btn btn-outline-inverse visible-xs"><span class="glyphicon glyphicon-th"></span></div>
 
-                    <div id="search-container">
-                        <div id="search-icon"><i class="fa fa-search"></i></div>
-                        <div id="search-input">
-                            <form class="clearfix">
-                                <input type="text" class="form-control" id="website-search" name="search" placeholder="Search">
-                                <div id="search-close"><i class="fa fa-times"></i></div>
-                            </form>
-                        </div>
-                    </div><!-- #search-container -->
-
                     <ul id="main-menu">
                         <li class="menu-item"><a href="index.html">Home</a></li>
                         <li class="menu-item current-menu-ancestor"><a href="what-we-believe.html">What we believe</a></li>
-                        <li class="menu-item"><a href="activities.html">Resources</a></li>
+                        <li class="menu-item"><a href="resources.html">Resources</a></li>
                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                     </ul><!-- #main-menu -->
 
@@ -212,9 +202,7 @@
             <!-- right -->
             <div class="col-sm-6 beneath-footer-right">
                 <ul class="social-media-icons clearfix">
-                    <li><a href="#" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" title="Google+"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="http://localhost:8000/contact.html" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
                 </ul>
             </div>
 
