Cleaned up what we believe, contact, and added images

--- a/contact.html
+++ b/contact.html
@@ -73,15 +73,6 @@
             <!-- =========== Page Body Inside Content =========== -->
             <div class="inside-body-content-container clearfix">
 
-                <!-- =========== Section 1: Top Banner =========== -->
-                <div id="top-banner" class="container-fluid horizontal-section-container clearfix">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <img src="images/temp/banner-7.jpg" alt="Sunset" class="full-width-image">
-                        </div><!-- .col-xs-12 -->
-                    </div><!-- .row -->
-                </div>
-                <!-- End: Section 1: Top Banner -->
 
                 <!-- =========== Section 2 =========== -->
                 <div class="container-fluid horizontal-section-container clearfix">
@@ -162,6 +153,16 @@
                     </div><!-- .row -->
                 </div><!-- .container-fluid -->
                 <!-- End: Section 2 -->
+
+                <!-- =========== Section 1: Top Banner =========== -->
+                <div id="top-banner" class="container-fluid horizontal-section-container clearfix">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <img src="images/church_front.jpg" alt="Sunset" class="full-width-image">
+                        </div><!-- .col-xs-12 -->
+                    </div><!-- .row -->
+                </div>
+                <!-- End: Section 1: Top Banner -->
 
             </div><!-- .inside-body-content-container -->
             <!-- End: Page Body Inside Content -->
