--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                                 <p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p>
 
-                                <p><a href="about.html" class="btn btn-outline-inverse btn-lg">find out more</a></p>
+                                <p><a href="what-we-believe.html" class="btn btn-outline-inverse btn-lg">find out more</a></p>
 
                             </div><!-- .section-container -->
                             <!-- End: Website Intro Paragraph -->
