--- a/what-we-believe.html
+++ b/what-we-believe.html
@@ -74,13 +74,13 @@
             <div class="inside-body-content-container clearfix">
 
                 <!-- =========== Section 1: Top Banner =========== -->
-                <div id="top-banner" class="container-fluid horizontal-section-container clearfix">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <img src="images/temp/banner-1.jpg" alt="Landscape, wind turbines" class="full-width-image">
-                        </div><!-- .col-xs-12 -->
-                    </div><!-- .row -->
-                </div>
+                <!-- <div id="top&#45;banner" class="container&#45;fluid horizontal&#45;section&#45;container clearfix"> -->
+                <!--     <div class="row"> -->
+                <!--         <div class="col&#45;xs&#45;12"> -->
+                <!--             <img src="images/tree_of_life.jpg" alt="Tree of life" class="full&#45;width&#45;image"> -->
+                <!--         </div><!&#45;&#45; .col&#45;xs&#45;12 &#45;&#45;> -->
+                <!--     </div><!&#45;&#45; .row &#45;&#45;> -->
+                <!-- </div> -->
                 <!-- End: Section 1: Top Banner -->
 
                 <!-- =========== Section 2 =========== -->
@@ -93,21 +93,51 @@
 
                                 <div class="section-content clearfix">
 
-                                    <h1 class="page_title">About Us</h1>
+                                    <h1 class="page_title">What we believe</h1>
 
-                                    <h4>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elituis sequis bibendum auct erd.</h4>
-
-                                    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra.</p>
-
-                                    <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p> 
-
-                                    <img src="images/temp/about_img.jpg" alt="Sky" class="content-image pull-left"> 
-
-                                    <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
-
-                                    <p>Fusce imperdiet ornare risus, sit amet luctus augue sodales ac. Morbi nunc justo, fringilla in tempor at, fermentum a felis. Morbi non mollis libero, lobortis luctus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer a dapibus nulla, ac condimentum ipsum. Nullam purus erat, interdum consectetur commodo eu, ullamcorper vitae ante. Duis ligula nulla, dignissim sed venenatis sit amet, vestibulum a erat. Nam ultricies leo vitae urna ullamcorper vestibulum.</p>
-
-                                    <p>Morbi gravida metus sit amet mi interdum sodales. Phasellus mattis risus neque, id interdum odio consequat quis. Curabitur aliquet libero sed auctor rhoncus. Phasellus pulvinar venenatis sodales. Proin tincidunt suscipit erat, nec viverra magna volutpat sed.</p>
+                                    <div class="row">
+                                      <div class="col-sm-4">
+                                        <img src="images/bad_news.jpg">
+                                        <h3>The Bad News</h3>
+                                        <p>
+                                          There is a great God that created everyone so that we might know and love him. However, each of us has been wicked (Rom 3.23). We have rebelled against this great and loving God. Though he created us, we’ve acted like we are greater than him and have served ourselves instead.
+                                        </p>
+                                        <p>
+                                        We are not good people who make mistakes now and then. We have been selfishly working against God and we will face the consequences from this just God (Romans 1.18).
+                                        </p>
+                                        <p>
+                                        There is nothing we can do to remove this guilt from ourselves. We will inevitably face God’s judgment.
+                                        </p>
+                                      </div>
+                                      <div class="col-sm-4">
+                                        <img src="images/good_news.jpg">
+                                        <h3>The Good News</h3>
+                                        <p>
+                                          Yet, even given all of this, God has made a way so that we can be rescued. His son Jesus came to earth as a human to die for our guilt. Jesus saved us in a way like no one else. He took our penalty, bore the cost of our guilt.
+                                        </p>
+                                        <p>
+                                        Because of this amazing act of grace, if we humbly turn to him in sorrow for our guilt (James 4.6-10), he will show us mercy and forgive us for our wickedness!
+                                        </p>
+                                        <p>
+                                        What a wonderful God, that he would love us even while we hated him (Romans 5.6-11)! There is no one else we can turn to who will love us so faithfully and graciously.
+                                        </p>
+                                        <p>
+                                        Thanks to God, he raised Jesus from death back to life, proving that he is God’s son and that all he did and taught was what we should follow and obey – and our resurrection.
+                                        </p>
+                                      </div>
+                                      <div class="col-sm-4">
+                                        <img src="images/your_response.jpg">
+                                        <h3>Your Response?</h3>
+                                        <p>
+                                          In the first speech given about Jesus after he had done all of this for us, one of Jesus’ followers told the crowd that God was giving his Spirit so that everyone who calls on the name of Jesus will be rescued. When the crowds realized that they had been involved with murdering Jesus, they didn’t know what to do. Peter told them to turn away from their wickedness and be immersed in water (baptized) in order to be forgiven of their guilt and in order to receive the gift of God’s Spirit (Acts 2).
+                                        </p>
+                                        <p>
+                                          God gave us his Spirit to purify us. He saved us so that, as his people, we would be enthusiastic about doing good (Titus 2). Christians are not to be stagnate, but are to continually pursue Jesus Christ, to share in his suffering and in his resurrection (Philippians 3).
+                                        </p>
+                                        <p>
+                                          Of course, not everyone who hears this message believes it. If you doubt all this, don’t turn away without first looking into the claim that Jesus was resurrected. This has been the foundational claim of Christianity since the very beginning and cannot reasonably be explained away.
+                                        </p>
+                                      </div>
 
                                 </div><!-- .section-content -->
 
@@ -229,6 +259,25 @@
         <script src="js/functions.js"></script>
         <!-- <script src="js/functions-min.js"></script> -->
         <script src="js/initialise-functions.js"></script>
+
+      <!-- <script> -->
+      <!--   var refTagger = { -->
+      <!--     settings: { -->
+      <!--       bibleVersion: "ESV"      -->
+      <!--     } -->
+      <!--   }; -->
+      <!--   (function(d, t) { -->
+      <!--     var g = d.createElement(t), s = d.getElementsByTagName(t)[0]; -->
+      <!--     g.src = "//api.reftagger.com/v2/RefTagger.js"; -->
+      <!--     s.parentNode.insertBefore(g, s); -->
+      <!--   }(document, "script")); -->
+      <!-- </script> -->
+
+      <!-- Go Here: http://labs.bible.org/NETBibleTagger to add this to your site. -->
+      <script type="text/javascript" defer="defer" src="https://labs.bible.org/api/NETBibleTagger/v2/netbibletagger.js">
+      org.bible.NETBibleTagger.voidOnMouseOut = true;
+      org.bible.NETBibleTagger.customCSS = false;
+      </script>
 
     </body>
 </html>
