Fixed the hero and the facebook links.

--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
                                             <hr/>        
 
                                             <ul class="social-media-icons clearfix">
-                                                <li><a href="http://localhost:8000/contact.html" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="https://www.facebook.com/groups/metrochurchofchrist/" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
                                             </ul>
 
                                         </div><!-- .col-sm-6 -->
