--- a/index.html
+++ b/index.html
@@ -94,38 +94,29 @@
 
                                 <div class="item">
                                     <div class="text bottom left">
-                                        <a href="about.html"><h2>Highly Customisable Multipurpose Theme</h2></a>
+                                        <a href="what-we-believe.html"><h2>Together we will live forever</h2></a>
                                         <div class="clearfix"></div>
-                                        <a href="about.html"><h5>Various reusable sections and components</h5></a>
+                                        <a href="what-we-believe.html"><h5>Interested?</h5></a>
                                     </div>
-                                    <a href="about.html"><img class="lazyOwl" data-src="images/temp/carousel-img7.jpg" src="#" alt="Wheat harvest"></a>
+                                    <a href="what-we-believe.html"><img class="lazyOwl" data-src="images/tree_of_life.jpg" src="#" alt="Tree of life"></a>
                                 </div>
 
                                 <div class="item">
                                     <div class="text bottom right">
-                                        <a href="services-grid.html"><h2>Clean and Effective Design</h2></a>
+                                        <a href="contact.html.html"><h2>What is the church?</h2></a>
                                         <div class="clearfix"></div>
-                                        <a href="services-grid.html"><h5>Elegant design which clearly presents the information</h5></a>
+                                        <a href="contact.html"><h5>It's not a building, it's not a priest - it's the people. Come meet us!</h5></a>
                                     </div>
-                                    <a href="services-grid.html"><img class="lazyOwl" data-src="images/temp/carousel-img3.jpg" src="#" alt="Highway"></a>
+                                    <a href="contact.html.html"><img class="lazyOwl" data-src="images/people1.jpg" src="#" alt="The church"></a>
                                 </div>
 
                                 <div class="item">
                                     <div class="text bottom left no-side-padding">
-                                        <a href="blog.html"><h2>Fully responsive layout</h2></a>
+                                        <!-- <a href="resources.html"><h2></h2></a> -->
                                         <div class="clearfix"></div>
-                                        <a href="blog.html"><h5>Well organised and structured, for every screen and device</h5></a>
+                                        <a href="resources.html"><h6>"Every good gift and every perfect gift is from above, coming down from the Father of lights with whom there is no variation or shadow due to change." (James 1:17)</h6></a>
                                     </div>
-                                    <a href="blog.html"><img class="lazyOwl" data-src="images/temp/carousel-img4.jpg" src="#" alt="Wheat harvest"></a>
-                                </div>
-
-                                <div class="item">
-                                    <a href="activities.html" class="text bottom-full-width">
-                                        <!-- change this <a> to a <div> if you don't want the caption to be a link -->
-                                        <h2>Well documented and simple to use</h2>
-                                        <p>A variety of layouts built with Bootstrap, which fit your needs</p>
-                                    </a>
-                                    <a href="activities.html"><img class="lazyOwl" data-src="images/temp/carousel-img1.jpg" src="#" alt="Scenery, Wind turbines"></a>
+                                    <a href="resources.html"><img class="lazyOwl" data-src="images/vanilla-sky-mke.jpg" src="#" alt="Vanilla sky"></a>
                                 </div>
 
                             </div><!-- #top-banner-carousel -->
@@ -386,7 +377,7 @@
             <!-- right -->
             <div class="col-sm-6 beneath-footer-right">
                 <ul class="social-media-icons clearfix">
-                    <li><a href="http://localhost:8000/contact.html" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.facebook.com/groups/metrochurchofchrist/" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
                 </ul>
             </div>
 
