--- a/what-we-believe.html
+++ b/what-we-believe.html
@@ -244,7 +244,7 @@
             <!-- right -->
             <div class="col-sm-6 beneath-footer-right">
                 <ul class="social-media-icons clearfix">
-                    <li><a href="http://localhost:8000/contact.html" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.facebook.com/groups/metrochurchofchrist/" target="_blank" title="Facebok"><i class="fa fa-facebook"></i></a></li>
                 </ul>
             </div>
 
