Added SoundCloud stream

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                         </a></li>
 
                                         <!-- list item -->
-                                        <li class="item clearfix"><a href="#" class="item-content">
+                                        <li class="item clearfix"><a href="contact.html" class="item-content">
                                             <h6 class="title">(For directions, call 414-393-8777)</h6>
                                         </a></li>
 
