--- a/resources.html
+++ b/resources.html
@@ -110,19 +110,20 @@
                                     <div class="thumbnail-list row clearfix">
 
                                         <!-- item -->
-                                        <div class="item col-sm-6">
-                                            <div class="thumbnail item-content">
-                                                <a href="https://soundcloud.com/metrococ" class="img-mask-effect fade scaleimage">
-                                                    <img src="images/soundcloud-icon.png" alt="Soundcloud">
-                                                    <i class="mask"><span class="glyphicon glyphicon-search"></span></i>
-                                                </a>
-                                                <div class="caption">
-                                                    <h5 class="title bold"><a href="https://soundcloud.com/metrococ">Sermon Recordings</a></h5>
-                                                    <p>Available on soundcloud.</p>
-                                                </div>
-                                            </div><!-- .thumbnail -->
+                                        <div class="item col-sm-7">
+                                            <h3>Featured Sermons</h3>
+
+<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/146828222&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
                                         </div><!-- .item -->
 
+                                        <!-- item -->
+                                        <div class="item col-sm-5">
+                                            <h3>Study Material</h3>
+
+                                            <p>Coming soon!</p>
+
+                                        </div><!-- .item -->
                                     </div>
 
                                 </div><!-- .section-content -->
