--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </div>
 
                                 <div class="item">
-                                    <div class="text bottom left no-side-padding">
+                                    <div class="text bottom right no-side-padding">
                                         <!-- <a href="resources.html"><h2></h2></a> -->
                                         <div class="clearfix"></div>
                                         <a href="resources.html"><h6>"Every good gift and every perfect gift is from above, coming down from the Father of lights with whom there is no variation or shadow due to change." (James 1:17)</h6></a>
