Minor wording change

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <div class="text bottom left">
                                         <a href="what-we-believe.html"><h2>Together we will live forever</h2></a>
                                         <div class="clearfix"></div>
-                                        <a href="what-we-believe.html"><h5>Interested?</h5></a>
+                                        <!-- <a href="what&#45;we&#45;believe.html"><h5>Interested?</h5></a> -->
                                     </div>
                                     <a href="what-we-believe.html"><img class="lazyOwl" data-src="images/tree_of_life.jpg" src="#" alt="Tree of life"></a>
                                 </div>
