Added new creation series banner

--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,8 @@
                                         </div><!-- .col-sm-5 -->
 
                                         <div class="col-sm-7">
-                                            <img src="images/church_front.jpg" alt="Sunset" class="full-width-image">
+                                            <!-- <img src="images/church_front.jpg" alt="Sunset" class="full&#45;width&#45;image"> -->
+                                            <img src="images/church_front.jpg" alt="Sunset" class="max-width-image">
                                             <h3>Absolutely everyone is welcome! Stop in sometime :)</h3>
 
                                         </div>
