--- a/index.html
+++ b/index.html
@@ -206,6 +206,22 @@
                 </div><!-- .container-fluid -->
                 <!-- End: Section 2 -->
 
+                <!-- =========== Section 3 =========== -->
+                <div class="container-fluid horizontal-section-container clearfix">
+                    <div class="row">
+
+                        <div class="col-sm-12">
+                            <!-- Website Intro Paragraph -->
+                            <div id="upcoming-events" class="section-container featured-text clearfix">
+
+                              <img src="images/events/new-creation-series-2015.png" class="max-width-image"> 
+
+                            </div><!-- .section-container -->
+                            <!-- End: Website Intro Paragraph -->
+                        </div><!-- .col-sm-12 -->
+                    </div><!-- .row -->
+                </div><!-- .container-fluid -->
+                <!-- End: Section 3 -->
 
                 <!-- =========== Footer =========== -->
                 <footer class="container-fluid horizontal-section-container clearfix">
