Added fall 2015 gospel meeting

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <div class="section-content clearfix">
                                     <h4><b>Meeting times</b></h4>
                                     <ul class="vertical-simple-list">
-                                        
+
                                         <!-- list item -->
                                         <li class="item clearfix"><a href="#" class="item-content">
                                             <h6 class="title">Sunday 9:30am - Bible Study</h6>
@@ -183,7 +183,7 @@
                                 <div class="section-content clearfix">
                                     <h4><b>Location</b></h4>
                                     <ul class="vertical-simple-list">
-                                        
+
                                         <!-- list item -->
                                         <li class="item clearfix"><a href="#" class="item-content">
                                             <h6 class="title"><a href="https://www.google.com/maps/place/9413+W+Greenfield+Ave,+West+Allis,+WI+53214/@43.0164229,-88.0296612,17z/data=!3m1!4b1!4m2!3m1!1s0x88050542307b66fd:0xc6cd4d9f2178f8e0">9413 W Greenfield Ave, West Allis, WI</a></h6>
@@ -214,7 +214,18 @@
                             <!-- Website Intro Paragraph -->
                             <div id="upcoming-events" class="section-container featured-text clearfix">
 
-                              <img src="images/events/lion-of-judah-series-2015.png" class="max-width-image"> 
+                                <h1>Gospel Meeting - Oct 16,17,18 2015</h1>
+                                <ul>
+                                  <li>Fri (Oct 16) 7:00 pm - Singing</li>
+                                  <li>Fri (Oct 16) 7:30 pm - She Has Done What She Could</li>
+
+                                  <li>Sat (Oct 17) 10:30 am - The Church: The Fullness Of God</li>
+                                  <li>Sat (Oct 17) 4:00 pm - The World Has Been Subjected To Futility</li>
+
+                                  <li>Sun (Oct 18) 9:30 am - Radical Salvation</li>
+                                  <li>Sun (Oct 18) 10:30 am - What If Christ Had Not Come</li>
+
+                                </ul>
 
                             </div><!-- .section-container -->
                             <!-- End: Website Intro Paragraph -->
@@ -278,12 +289,12 @@
                                 </div><!-- .section-content -->
 
                             </div><!-- .section-container -->
-                            <!-- End: Contact Us -->                            
+                            <!-- End: Contact Us -->
                         </div><!-- .col-sm-6 -->
 
                     </div><!-- .row -->
                 </footer><!-- .container-fluid -->
-                <!-- End: Footer -->             
+                <!-- End: Footer -->
 
             </div><!-- .inside-body-content-container -->
             <!-- End: Page Body Inside Content -->
