--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             <!-- Website Intro Paragraph -->
                             <div id="upcoming-events" class="section-container featured-text clearfix">
 
-                                <h1>Gospel Meeting - Oct 16,17,18 2015</h1>
+                                <h1>Gospel Meeting with Whit Sasser - Oct 16-18 2015</h1>
                                 <ul>
                                   <li>Fri (Oct 16) 7:00 pm - Singing</li>
                                   <li>Fri (Oct 16) 7:30 pm - She Has Done What She Could</li>
