Removed upcoming event

--- a/index.html
+++ b/index.html
@@ -207,20 +207,20 @@
                 <!-- End: Section 2 -->
 
                 <!-- =========== Section 3 =========== -->
-                <div class="container-fluid horizontal-section-container clearfix">
-                    <div class="row">
-
-                        <div class="col-sm-12">
-                            <!-- Website Intro Paragraph -->
-                            <div id="upcoming-events" class="section-container featured-text clearfix">
-                              <img src="images/gospel_meeting_spring_2016.png">
-
-                            </div><!-- .section-container -->
-                            <!-- End: Website Intro Paragraph -->
-                        </div><!-- .col-sm-12 -->
-                    </div><!-- .row -->
-                </div><!-- .container-fluid -->
-                <!-- End: Section 3 -->
+                <!-- <div class="container&#45;fluid horizontal&#45;section&#45;container clearfix"> -->
+                <!--     <div class="row"> -->
+                <!--  -->
+                <!--         <div class="col&#45;sm&#45;12"> -->
+                <!--             <!&#45;&#45; Website Intro Paragraph &#45;&#45;> -->
+                <!--             <div id="upcoming&#45;events" class="section&#45;container featured&#45;text clearfix"> -->
+                <!--               <img src="images/gospel_meeting_spring_2016.png"> -->
+                <!--  -->
+                <!--             </div><!&#45;&#45; .section&#45;container &#45;&#45;> -->
+                <!--             <!&#45;&#45; End: Website Intro Paragraph &#45;&#45;> -->
+                <!--         </div><!&#45;&#45; .col&#45;sm&#45;12 &#45;&#45;> -->
+                <!--     </div><!&#45;&#45; .row &#45;&#45;> -->
+                <!-- </div><!&#45;&#45; .container&#45;fluid &#45;&#45;> -->
+                <!-- <!&#45;&#45; End: Section 3 &#45;&#45;> -->
 
                 <!-- =========== Footer =========== -->
                 <footer class="container-fluid horizontal-section-container clearfix">
